fix: updates letter spacing

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -31,16 +31,14 @@ a
 	color: $delta
 	text-decoration: underline
 	font-weight: $thin-font
+	letter-spacing: 1px
 
 p
 	line-height: 1.7
 	color: $alpha
 	font-weight: 300
 	margin-bottom: 20px
-	letter-spacing: 0.4px
-
-	@media #{$mobile}
-		letter-spacing: 0.2px
+	letter-spacing: 1px
 
 strong
 	font-weight: 400
@@ -49,6 +47,7 @@ strong
 ul,
 ol
 	li
+		letter-spacing: 1px
 		line-height: 2.4rem
 		font-weight: 300
 		color: $alpha
